--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
-
 .App {
-  width: 100vw;
-  height: 100vh;
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #2f74c0;
-  font-family: "Neucha", cursive;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.heading {
-  text-transform: uppercase;
-  font-size: 40px;
-  margin: 30px 0;
-  color: white;
-  z-index: 1;
-  text-align: center;
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
